--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Here I am</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>SiewYan's Workbench</h1>
+				<p>Documentation of various projects</em> Don't trust me. </p>
+			<!-- <a href="/about">Read more about my life...</a> -->
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
         		<li><a href="mailto:siew.yan.hoh@cern.ch">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="https://github.com/SiewYan/SiewYan.github.io">SiewYan.github.io</a></li>
 			</ul>
 		</footer>
 	</body>
