--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>SiewYan's Workbench</h1>
-				<p>Documentation of various projects</em> Don't trust me. </p>
+				<p>Documentation of various projects</p>
 			<!-- <a href="/about">Read more about my life...</a> -->
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
