--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
+        		<li><a href="http://shoh.web.cern.ch/shoh/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/cv">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
@@ -18,6 +18,9 @@
     		<div class="blurb">
         		<h1>SiewYan's Workbench</h1>
 				<p>Documentation of various projects</p>
+			<ul>
+				<li><a href="http://shoh.web.cern.ch/shoh/Fermilab_HEPs/">Read more about my life...</a>
+			</ul>
 			<!-- <a href="/about">Read more about my life...</a> -->
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
