--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: SiewYan's Workbench
 ---
 
 		<div class="blurb">
-			<h1>Hi there, I'm Hank Quinlan!</h1>
-			<p>I'm best known as the horrible cop from <em>A Touch of Evil</em>. Don't trust me. <a href="/about">Read more about my life...</a></p>
+			<h1>Hi there, this is SiewYab's workbench</h1>
+			<p>Documentation of various projects.</p>
+				<!--<a href="/about">Read more about my life...</a>--></p>
 		</div> 
