--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: SiewYan's Workbench
 ---
 
 		<div class="blurb">
-			<h1>Hi there, this is SiewYab's workbench</h1>
+			<h1>Hi there, this is SiewYan's workbench</h1>
 			<p>Documentation of various projects.</p>
 				<!--<a href="/about">Read more about my life...</a>--></p>
 		</div> 
