--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: SiewYan's Workbench
 			<h2>Documentation of various projects.</h2>
 				<!--<a href="/about">Read more about my life...</a>--></p>
 			<ul>
-			<li>NANOAOD Analysis click <a href="https://twiki.cern.ch/twiki/bin/view/CMSPublic/WorkBookNanoAOD">here</a>
+			<li><a href="https://twiki.cern.ch/twiki/bin/view/CMSPublic/WorkBookNanoAOD" target="_blank" >Preliminary NanoAod Analysis</a>
 			<li>CMS Big DATA
 			</ul>	
 		</div> 
