--- a/projects/CMSBigData.html
+++ b/projects/CMSBigData.html
@@ -4,14 +4,17 @@ title: CMS Big Data
 ---
 
 <div class="cv">
-  <a href="#" class="download" title="Download CV as PDF">Download pdf</a>
-  <a href="#" class="download" title="Download CV as PDF">Download pdf</a>
+  <a href="#" class="download" title="Download CV as PDF">Download pdf</a><pre>
+  <a href="#" class="download" title="Download CV as PDF">Download pdf</a><pre>
   <a href="#" class="download" title="Download CV as PDF">Download pdf</a>
   <h1>CMS Big Data</h1>
 
-  <h2>Select Publications</h2>
+  <h2>Setting up jupyter notebook</h2>
 
-  <p><strong>Last Name, F.</strong> (204). Title of a Chapter You Wrote for a Book. In I.M Editor (Ed.), <em>The Book I Contributed To</em> (pp. 97-108). City, ST: Publisher Name. Chapter available at: <a href="#">http://permalink</a>.
+  <p>A ssh tunnel is necesary in order to run jupyter locally in the browser. First ssh into your cluster with command below:
+  <code>
+  ssh -L localhost:1122:localhost:1122 shoh@10.64.22.66
+  </code>
 
 
 </div>
