--- a/projects/CMSBigData.html
+++ b/projects/CMSBigData.html
@@ -10,11 +10,11 @@ title: CMS Big Data
   <h1>CMS Big Data</h1>
 
   <h2>Setting up jupyter notebook</h2>
-
-  <p>A ssh tunnel is necesary in order to run jupyter locally in the browser. First ssh into your cluster with command below:
+  <ul>
+  <li>A ssh tunnel is necesary in order to run jupyter locally in the browser. First ssh into your cluster with command below:
   <pre><code>
   ssh -L localhost:1122:localhost:1122 shoh@10.64.22.66
   </code></pre>
-
+</ul>
 
 </div>
