--- a/projects/CMSBigData.html
+++ b/projects/CMSBigData.html
@@ -8,7 +8,7 @@ title: CMS Big Data
   <h3>Setting up jupyter notebook</h3>
   <ul>
   <li><p>A ssh tunnel is necesary in order to run jupyter locally in the browser. First ssh into your cluster with command below:</p>
- <code>
+ <pre><code>
   ssh -L localhost:1122:localhost:1122 shoh@10.64.22.66
-  </code>
+ </code></pre>
 </ul>
