--- a/projects/CMSBigData.html
+++ b/projects/CMSBigData.html
@@ -17,3 +17,35 @@ title: CMS Big Data
   <p>It will yield a link which needed to be pasted in the url field in the browser, if everything is ok, the browser will load the cluster 
     environment with jupyter notebook. You are good to go.</p>
 </ul>
+<h4>Verify Spark is Properly Installed</h4>
+<ul>
+  <li><p>Each notebook runs as a separate Python process, but Spark itself is implemented in Scala (which is related to Java). 
+    The PySpark interface connects the two languages and handles passing data back and forth between the two. To gain access to Spark, 
+    you first need to create a SparkSession who loads the Scala binaries via PySpark. Once the connection is complete, 
+    PySpark returns a SparkSession, which is the central entrypoint to Spark.</p>
+    <pre><code>
+    from pyspark.sql import SparkSession
+    spark = SparkSession.builder \
+    .master(
+        "spark://10.64.22.66:7077"
+    ) \
+    .appName(# Name of your application in the dashboard/UI
+             "printNanoAodAPP"
+            ) \
+    .config(# Tell Spark to load some extra libraries from Maven (the Java repository)
+            'spark.jars.packages',
+            'org.diana-hep:spark-root_2.11:0.1.13,org.diana-hep:histogrammar-sparksql_2.11:1.0.4',
+            ) \
+    .config('spark.cores.max',3
+            ) \
+    .getOrCreate()
+
+#Read the ROOT file into a Spark DataFrame
+df = spark.read.format("org.dianahep.sparkroot").load("hdfs:/user/shoh/output.root")
+# ... and print the number of events
+print df.count()
+
+#show GenMET_pt and HLTT_AK8PFHT750_TrimMass50
+df.select("GenMET_pt","HLT_AK8PFHT750_TrimMass50").show(3)
+    </code></pre>
+</ul>
