--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@ title: SiewYan's Workbench
 			<ul>
 			<li><a href="https://twiki.cern.ch/twiki/bin/view/CMSPublic/WorkBookNanoAOD" target="_blank" >Preliminary NanoAod Analysis</a>
 			<li><a href="/projects/CMSBigData.html" target="_blank" >CMS Big DATA</a> 
-
+			<li><a href="/projects/darkhiggs.html" target="_blank" >Dark Higgs Searches</a>
+			<li><a href="/" target="_blank" >ALPHA framework</a>
+			<li><a href="/" target="_blank" >LPCPandaPhysics</a>
+				
 			</ul>	
 		</div> 
