--- a/projects/darkhiggs.html
+++ b/projects/darkhiggs.html
@@ -1,10 +1,9 @@
-
 ---
 layout: default
-title: Dark Higgs Searches on 2016 dataset 37 fb^-1
+title: Dark Higgs Searches on 2016 dataset 37 fb-1
 ---
 
-<h1>Dark Higgs Searches on 2016 dataset 37 fb^-1</h1>
+<h1>Dark Higgs Searches on 2016 dataset 37 fb-1</h1>
 <h4>Dark Higgs signal samples preparation</h4>
 <h4>Post-processing</h4>
 <h4>Data-MC validation (pre-fit)</h4>
