--- a/projects/CMSBigData.html
+++ b/projects/CMSBigData.html
@@ -52,7 +52,7 @@ df.select("GenMET_pt","HLT_AK8PFHT750_TrimMass50").show(3)
     <p>This block demonstrated that the root reading capability is intact. The operation on files stored in hdfs could be found <a href="https://indico.cern.ch/event/404527/contributions/968835/attachments/1123385/1603232/Introduction_to_HDFS.pdf" target="_blank">here</a></p>
   <li><p>Furhter Verification could be achive by running the below script in your jupyter notebook</p>
     <pre><code>
-    #Verifying spark, spark-root, histogrammer, and matplot works
+#Verifying spark, spark-root, histogrammer, and matplot works
 from pyspark.sql import SparkSession
 
 spark = SparkSession.builder \
@@ -86,7 +86,7 @@ pi = 4.0 * count / num_samples
 print(pi)
     </code></pre>
     <pre><code>
-    #Verifying Spark-ROOT functionality
+#Verifying Spark-ROOT functionality
 # Read the ROOT file into a Spark DataFrame...
 import os
 testPath = "hdfs:///user/shoh/nanoaod/bbdm80X_NANO.root"
@@ -94,4 +94,34 @@ df = spark.read.format("org.dianahep.sparkroot").load(testPath)
 # ... and print the number of events
 print df.count()
     </code></p>
+    
+    <pre><code>
+#Verifying histogrammar
+# Produce 200,000 random numbers
+import random
+data = [random.gauss(0, 1) for i in range(200000)]
+
+# Define the histogram
+import histogrammar as hg
+gauss = hg.Bin(num=16,
+                   low=-4,
+                   high=4,
+                   quantity=lambda x: x,
+                   value=hg.Count())
+
+# Fill the histogram with the values we generated earlier
+for d in data:
+    gauss.fill(d)
+
+# Plot the resulting histogram
+print gauss.ascii()
+    </code></pre>
+    
+    <pre><code>
+#Verifying Matplotlib Functionality
+import matplotlib.pyplot as plt
+%matplotlib inline
+plot = gauss.plot.matplotlib(name="Unit Gaussian")
+    </code></pre>
+    <p>If you manage to the output of each block, you have verified that spark, spark-root, histogrammer and matlibplot are working!</p>
 </ul>
