--- a/projects/CMSBigData.html
+++ b/projects/CMSBigData.html
@@ -95,7 +95,7 @@ testPath = "hdfs:///user/shoh/nanoaod/bbdm80X_NANO.root"
 df = spark.read.format("org.dianahep.sparkroot").load(testPath)
 # ... and print the number of events
 print df.count()
-</code></p>
+</code></pre>
     
 <pre><code>
 #Verifying histogrammar
