--- a/projects/darkhiggs.html
+++ b/projects/darkhiggs.html
@@ -10,7 +10,7 @@ title: Dark Higgs Searches on 2016 dataset 37 fb-1
 <ul>
   <li><h5>Data-MC validation</h5>
     <ul>
-      <li><a href="http://shoh.web.cern.ch/shoh/filesystem/index.php?dir=FNALDM/DarkHiggs/v3" target="_blank">Plots</a>
+      <li><a href="http://shoh.web.cern.ch/shoh/filesystem/index.php?dir=FNALDM/DarkHiggs/v3" target="_blank">Plots</a></li>
       <\ul>
   <li><h5>Contamination study</h5>
 </ul>
