--- a/projects/darkhiggs.html
+++ b/projects/darkhiggs.html
@@ -8,10 +8,10 @@ title: Dark Higgs Searches on 2016 dataset 37 fb-1
 <h4>Post-processing</h4>
 <h4>Data-MC validation (pre-fit)</h4>
 <ul>
-  <li><h5>Data-MC validation</h5>
+  <li><p><h5>Data-MC validation</h5></p>
     <ul>
-      <li><a href="http://shoh.web.cern.ch/shoh/filesystem/index.php?dir=FNALDM/DarkHiggs/v3" target="_blank">Plots</a></li>
+      <li><p><a href="http://shoh.web.cern.ch/shoh/filesystem/index.php?dir=FNALDM/DarkHiggs/v3" target="_blank">Plots</a></p>
       <\ul>
-  <li><h5>Contamination study</h5>
+        <li><p><h5>Contamination study</h5></p>
 </ul>
 <h4>Intepretation (post-fit)</h4>
