--- a/projects/darkhiggs.html
+++ b/projects/darkhiggs.html
@@ -11,7 +11,10 @@ title: Dark Higgs Searches on 2016 dataset 37 fb-1
   <li><p><h5>Data-MC validation</h5></p>
     <ul>
       <li><p><a href="http://shoh.web.cern.ch/shoh/filesystem/index.php?dir=FNALDM/DarkHiggs/v3" target="_blank">Plots</a></p>
-      <\ul>
-        <li><p><h5>Contamination study</h5></p>
+    <\ul>
+  <li><p><h5>Contamination study</h5></p>
+        <ul>
+          <li><p><script src="https://gist.github.com/SiewYan/ebdc0c85cdb903207cd3e3cb916fbef5.js"></script></p>
+        </ul>
 </ul>
 <h4>Intepretation (post-fit)</h4>
