--- a/projects/darkhiggs.html
+++ b/projects/darkhiggs.html
@@ -3,15 +3,13 @@ layout: default
 title: Dark Higgs Searches on 2016 dataset 37 fb-1
 ---
 
-<h1>Dark Higgs Searches on 2016 dataset 37 fb-1</h1>
+<h1>Dark Higgs Searches on 2016 dataset</h1>
 <h4>Dark Higgs signal samples preparation</h4>
 <h4>Post-processing</h4>
 <h4>Data-MC validation (pre-fit)</h4>
 <ul>
   <li><p><h5>Data-MC validation</h5></p>
-    <ul>
-      <li><p><a href="http://shoh.web.cern.ch/shoh/filesystem/index.php?dir=FNALDM/DarkHiggs/v3" target="_blank">Plots</a></p>
-    <\ul>
+  <li><p><a href="http://shoh.web.cern.ch/shoh/filesystem/index.php?dir=FNALDM/DarkHiggs/v3" target="_blank">Plots</a></p>
   <li><p><h5>Contamination study</h5></p>
         <ul>
           <li><p><script src="https://gist.github.com/SiewYan/ebdc0c85cdb903207cd3e3cb916fbef5.js"></script></p>
